fix: collapse of full details desc line break

--- a/src/components/itemfulldetails.scss
+++ b/src/components/itemfulldetails.scss
@@ -42,6 +42,8 @@
   overflow-wrap: break-word;
 
   margin-bottom: 1em;
+
+  white-space: pre-line;
 }
 .no-desc {
   font-family: $font-mono;
